--- a/style.css
+++ b/style.css
@@ -81,5 +81,5 @@ main {
   height: 50px;
   border-radius: 25px;
   /* background-color: green; */
-  background-color: white;
-} */
+  /* background-color: white; */
+/* } */
