--- a/style.css
+++ b/style.css
@@ -23,63 +23,100 @@ main {
     width: 44%;
     height: 44%;
     background-color: red;
+    display: flex;
+    flex-flow: row nowrap;
   }
 
   .squaretr {
     margin: 4% 2% 2% 4%;
+    justify-content: center;
+    align-items: flex-start;
   }
 
   .squaretl {
     margin: 4% 4% 2% 2%;
+    justify-content: center;
+    align-items: flex-end;
   }
 
   .squareb {
     margin: 2% auto 4%;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .circle {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    border-radius: 25px;
+    background-color: white;
+    background-color: green;
+  }
+
+  .triangle-up {
+    position: relative;
+    width: 0;
+    border-bottom: solid 50px green;
+    border-right: solid 30px transparent;
+    border-left: solid 30px transparent;
+  }
+  .triangle-down {
+    position: relative;
+    width: 0;
+    border-bottom: solid 50px green;
+    border-right: solid 30px transparent;
+    border-left: solid 30px transparent;
+    transform: rotate(180deg);
   }
 }
 
 @media (min-width: 400px) {
   #canvas {
     background-color: white;
-    margin: auto;
-    width: 100%;
     max-width: 920px;
+    width: 100%;
+    /* margin: auto; */
     display: flex;
     flex-flow: row nowrap;
-    justify-content: center;
+    justify-content: flex-start;
+    align-items: flex-start;
   }
 
   #canvas > div {
-    position: relative;
     width: 28%;
-    padding-top: 28%;
-    margin: 4% 2%;
+    height: 28%;
+    /* padding-top: 28%;
+    margin: 4% 2%; */
     background-color: red;
-    /* display: flex;
+    display: flex;
     flex-flow: row nowrap;
-    align-items: center;
+    /* align-items: center;
     justify-content: center; */
   }
-}
 
-.circle {
-  position: absolute;
-  transform-origin: 25px 25px;
-  top: 40%;
-  right: 40%;
-  width: 50px;
-  height: 50px;
-  /* padding-bottom: 50px; */
-  border-radius: 25px;
-  /* background-color: green; */
-  background-color: white;
-}
+  .circle {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    border-radius: 25px;
+    background-color: white;
+    background-color: green;
+  }
 
-/* .triangle {
-  align-self: flex-start;
-  width: 50px;
-  height: 50px;
-  border-radius: 25px;
-  /* background-color: green; */
-  /* background-color: white; */
-/* } */
+  .triangle-up {
+    position: relative;
+    width: 0;
+    border-bottom: solid 50px green;
+    border-right: solid 30px transparent;
+    border-left: solid 30px transparent;
+  }
+  .triangle-down {
+    position: relative;
+    width: 0;
+    border-bottom: solid 50px green;
+    border-right: solid 30px transparent;
+    border-left: solid 30px transparent;
+    transform: rotate(180deg);
+  }
+}
