--- a/style.css
+++ b/style.css
@@ -6,117 +6,98 @@ main {
   justify-content: center;
   align-items: center;
 }
+#canvas {
+  background-color: white;
+  margin: auto;
+  width: 100%;
+  max-width: 920px;
+  display: flex;
+  flex-flow: wrap;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
 
-@media (max-width: 400px) {
-  #canvas {
-    background-color: white;
-    min-width: 320px;
-    width: 320px;
-    height: 320px;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: flex-start;
-    align-items: flex-start;
-  }
+#canvas > .square {
+  width: 44%;
+  padding-top: 44%;
+  background-color: red;
+  position: relative;
+}
 
-  #canvas > div {
-    width: 44%;
-    height: 44%;
-    background-color: red;
-    display: flex;
-    flex-flow: row nowrap;
-  }
+.square.square-right {
+  margin: 4% 2% 2% 4%;
+  order: 1;
+}
 
-  .squaretr {
-    margin: 4% 2% 2% 4%;
-    justify-content: center;
-    align-items: flex-start;
-  }
+.square.square-left {
+  margin: 4% 4% 2% 2%;
+  order: 2;
+}
 
-  .squaretl {
-    margin: 4% 4% 2% 2%;
-    justify-content: center;
-    align-items: flex-end;
-  }
+.square.square-bottom {
+  margin: 2% auto 4%;
+  order: 3;
+}
 
-  .squareb {
-    margin: 2% auto 4%;
-    justify-content: center;
-    align-items: center;
-  }
+.triangle {
+  position: absolute;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 0 30px 50px 30px;
+  border-color: transparent transparent green transparent;
+  display: block;
+}
 
-  .circle {
-    position: absolute;
-    width: 50px;
-    height: 50px;
-    border-radius: 25px;
-    background-color: white;
-    background-color: green;
-  }
+.circle {
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  border-radius: 25px;
+  background-color: green;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.left {
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+}
 
-  .triangle-up {
-    position: relative;
-    width: 0;
-    border-bottom: solid 50px green;
-    border-right: solid 30px transparent;
-    border-left: solid 30px transparent;
-  }
-  .triangle-down {
-    position: relative;
-    width: 0;
-    border-bottom: solid 50px green;
-    border-right: solid 30px transparent;
-    border-left: solid 30px transparent;
-    transform: rotate(180deg);
-  }
+.right {
+  top: 100%;
+  left: 50%;
+  transform: translate(-50%, -100%) rotate(180deg);
 }
 
 @media (min-width: 400px) {
   #canvas {
     background-color: white;
-    max-width: 920px;
+    margin: auto;
     width: 100%;
-    /* margin: auto; */
+    max-width: 920px;
     display: flex;
     flex-flow: row nowrap;
-    justify-content: flex-start;
-    align-items: flex-start;
+    justify-content: center;
   }
 
-  #canvas > div {
+  #canvas > .square {
     width: 28%;
     height: 28%;
-    /* padding-top: 28%;
-    margin: 4% 2%; */
+    padding-top: 28%;
+    margin: 4% 2%;
     background-color: red;
-    display: flex;
-    flex-flow: row nowrap;
-    /* align-items: center;
-    justify-content: center; */
+  }
+  .square.square-right {
+    order: 1;
   }
 
-  .circle {
-    position: absolute;
-    width: 50px;
-    height: 50px;
-    border-radius: 25px;
-    background-color: white;
-    background-color: green;
+  .square.square-left {
+    order: 3;
   }
 
-  .triangle-up {
-    position: relative;
-    width: 0;
-    border-bottom: solid 50px green;
-    border-right: solid 30px transparent;
-    border-left: solid 30px transparent;
-  }
-  .triangle-down {
-    position: relative;
-    width: 0;
-    border-bottom: solid 50px green;
-    border-right: solid 30px transparent;
-    border-left: solid 30px transparent;
-    transform: rotate(180deg);
+  .square.square-bottom {
+    order: 2;
   }
 }
